# duboisTerminal

./: README.md  alarma.py  jammerActivate.py  jammerDeactivate.py  makefile  pyproject.toml  radioCheck.py
script/: alarma  radioCheck  startJammer  stopJammer
src/: connectDevice.c  createKeys.c  deleteKeys.c  ejectDevice.c  help.c  info.c
